# djzs-AI

./: .dockerignore  .env.deploy  .env.example  .gitignore  .replit  BONFIRES_REVIEW.md  CONTRACTS.md  CONVERSATION_LOG.md  DEMO_SCRIPT.md  DEPLOY_NFT.md  DISCLOSURE.md  Dockerfile  README.md  SUBMISSION_PAYLOAD.json  agent.json  agent_log.json  deploy-base.mjs  deploy-contract.mjs  deploy-simple.mjs  deploy.mjs  deploy.sh  docker-compose.yml  hardhat-minimal.config.js  hardhat.config.cjs  hardhat.config.ts  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts  xmtp-dev-3a909cafc56891a4873e3961eee6841b9112cf6c98c99476c8d2c32e6c037487.db3  xmtp-dev-3a909cafc56891a4873e3961eee6841b9112cf6c98c99476c8d2c32e6c037487.db3-shm  xmtp-dev-3a909cafc56891a4873e3961eee6841b9112cf6c98c99476c8d2c32e6c037487.db3-wal  xmtp-dev-69abaeaa5159f37604e26ec9e75ae1f6c5fc0f1d35bf73987934a58beac67b30.db3  xmtp-dev-69abaeaa5159f37604e26ec9e75ae1f6c5fc0f1d35bf73987934a58beac67b30.db3-shm  xmtp-dev-69abaeaa5159f37604e26ec9e75ae1f6c5fc0f1d35bf73987934a58beac67b30.db3-wal  xmtp-dev-85dd7aedd3ae8bbd56054f6e3b64f698083808fd2c5be717722abbc3a9774c4f.db3  xmtp-dev-85dd7aedd3ae8bbd56054f6e3b64f698083808fd2c5be717722abbc3a9774c4f.db3-shm  xmtp-dev-85dd7aedd3ae8bbd56054f6e3b64f698083808fd2c5be717722abbc3a9774c4f.db3-wal  xmtp-dev-970e36b65b3137edb8ec4b3b11b451bf11cb6ad076a31e3d6683f1ab936bad0e.db3  (+5 more)
.agents/: agent_assets_metadata.toml
attached_assets/: DJZS_SYNTHESIS_SPRINT_PLAN_1773273049344.md  DJZS_Strategy_Memo_1772325052228.docx  Pasted--FILE-cli-1771123380090_1771123380091.txt  (+151 more)
(+210 files in other folders)
